
    HADOOP-9381. Document dfs cp -f option. (Keegan Witt, suresh via suresh)

    HADOOP-9868. Server must not advertise kerberos realm. (daryn via kihwal)

    HADOOP-9880. SASL changes from HADOOP-9421 breaks Secure HA NN. (daryn via
    jing9)

    HADOOP-9887. globStatus does not correctly handle paths starting with a drive
    spec on Windows. (Chuan Liu via cnauroth)

Release 2.1.0-beta - 2013-08-22

  INCOMPATIBLE CHANGES

    HADOOP-8886. Remove KFS support. (eli)

    HADOOP-9163. [RPC v9] The rpc msg in ProtobufRpcEngine.proto should be moved out to
    avoid an extra copy (Sanjay Radia)

    HADOOP-9151. [RPC v9] Include RPC error info in RpcResponseHeader instead of sending
    it separately (sanjay Radia)

    HADOOP-9380. [RPC v9] Add totalLength to rpc response  (sanjay Radia)

    HADOOP-9425. [RPC v9] Add error codes to rpc-response (sanjay Radia)

    HADOOP-9194. [RPC v9] RPC support for QoS. (Junping Du via llu)

    HADOOP-9630. [RPC v9] Remove IpcSerializationType. (Junping Du via llu)

    HADOOP-9421. [RPC v9] Convert SASL to use ProtoBuf and provide
    negotiation capabilities (daryn)

    HADOOP-9688. Add globally unique Client ID to RPC requests. (suresh)

    HADOOP-9683. [RPC v9] Wrap IpcConnectionContext in RPC headers (daryn)

    HADOOP-9698. [RPC v9] Client must honor server's SASL negotiate response (daryn)

    HADOOP-9832. [RPC v9] Add RPC header to client ping (daryn)

    HADOOP-9820. [RPC v9] Wire protocol is insufficient to support multiplexing. (daryn via jitendra)

  NEW FEATURES

    HADOOP-9283. Add support for running the Hadoop client on AIX. (atm)

    HADOOP-8415. Add getDouble() and setDouble() in 
    org.apache.hadoop.conf.Configuration (Jan van der Lugt via harsh)

    HADOOP-9338. FsShell Copy Commands Should Optionally Preserve File
    Attributes. (Nick White via atm)

    HADOOP-8562. Enhancements to support Hadoop on Windows Server and Windows